[package]
name = "dxrs"
version = "0.1.0"
edition = "2021"
authors = ["Ken Youens-Clark <kyclark@dnanexus.com>"]
default-run = "dxrs"

[dependencies]
ansi_term = "0.12"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5"
env_logger = "0.10"
flate2 = "1"
futures-util = "0.3"
http = "0.2.9"
indicatif = "0.17"
inquire = "0.6.2"
log = "0.4"
md5 = "0.7"
once_cell = "1.19.0"
ordinal = "0.3.1"
rayon = "1.9.0"
regex = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.4"
size = "0.4"
strum = "0.25"
strum_macros = "0.25"
tabular = "0.2"
tar = "0.4"
tempfile = "3"
terminal-link = "0.1.0"
termtree = "0.4"
textnonce = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2.4.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[[bin]]
name = "dxrs-download-all-inputs"
